fix overflow-x and update rgba background color

--- a/src/modules/components/Blog/BlogPopUp/BlogPopUp.scss
+++ b/src/modules/components/Blog/BlogPopUp/BlogPopUp.scss
@@ -5,11 +5,13 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.822);
+  background-color: rgba(0, 0, 0, 0.911);
   overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
+  padding: 0 10px;
 
   &__image {
     max-height: 100%;
